# AndroidAvifExamples

./: BUILDING_ANDROID_LIBAVIF.md  README.md
AvifJniRenderDirectory/: README.md  settings.gradle.kts
AvifJniRenderDirectory/app/: build.gradle.kts
AvifJniRenderDirectory/app/src/androidTest/java/com/example/avifjnirenderdirectory/: ExampleInstrumentedTest.java
AvifJniRenderDirectory/app/src/main/: AndroidManifest.xml
AvifJniRenderDirectory/app/src/main/cpp/: CMakeLists.txt  native-avif-decoder.cpp
AvifJniRenderDirectory/app/src/main/java/com/example/avifjnirenderdirectory/: MainActivity.java  NativeAvifDecoder.java
AvifJniRenderDirectory/app/src/main/res/layout/: config_screen.xml  show_image.xml
AvifJniRenderDirectory/app/src/main/res/values/: strings.xml  themes.xml
AvifJniRenderDirectory/app/src/main/res/values-night/: themes.xml
AvifJniRenderDirectory/app/src/test/java/com/example/avifjnirenderdirectory/: ExampleUnitTest.java
AvifJniRenderDirectory/gradle/wrapper/: gradle-wrapper.properties
AvifRenderTest/: README.md  settings.gradle
AvifRenderTest/AndroidStudioProjects/AvifRenderTest/: local.properties
AvifRenderTest/app/: build.gradle
AvifRenderTest/app/src/androidTest/java/com/example/avifexamples/avifrendertest/: ExampleInstrumentedTest.java
AvifRenderTest/app/src/main/: AndroidManifest.xml
AvifRenderTest/app/src/main/cpp/: CMakeLists.txt  libavif_jni.cpp
AvifRenderTest/app/src/main/java/com/example/avifexamples/avifrendertest/: AvifDecoder.java  LibAvif.java  MainActivity.java
AvifRenderTest/app/src/main/res/values/: strings.xml  themes.xml
AvifRenderTest/app/src/main/res/values-night/: themes.xml
AvifRenderTest/app/src/test/java/com/example/avifexamples/avifrendertest/: ExampleUnitTest.java
AvifRenderTest/gradle/wrapper/: gradle-wrapper.properties
basicLibavifAndroid/: README.md
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/: README.md  settings.gradle
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/: build.gradle
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/androidTest/java/com/example/avifexamples/basiclibavifandroid/: ExampleInstrumentedTest.java
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/main/: AndroidManifest.xml
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/main/java/com/example/avifexamples/basiclibavifandroid/: MainActivity.java
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/main/res/values/: strings.xml  themes.xml
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/main/res/values-night/: themes.xml
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/app/src/test/java/com/example/avifexamples/basiclibavifandroid/: ExampleUnitTest.java
basicLibavifAndroid/AndroidStudioProjects/BasicLibavifAndroid/gradle/wrapper/: gradle-wrapper.properties
